Fix the time picker spacing.

--- a/admin/css/jquery-ui-audiotheme.css
+++ b/admin/css/jquery-ui-audiotheme.css
@@ -27,7 +27,7 @@ ul.ui-autocomplete-input.open {
 	-webkit-border-bottom-right-radius: 0; -webkit-border-bottom-left-radius: 0;
 	border-bottom-right-radius: 0; border-bottom-left-radius: 0;}
 
-ul.ui-timepicker-list { overflow-y: auto; margin-top: -1px; height: 150px; border-style: solid; border-width: 1px;}
+ul.ui-timepicker-list { overflow-y: auto; margin-top: 0; height: 150px; border-style: solid; border-width: 0 1px 1px 1px;}
 ul.ui-timepicker-list li { cursor: pointer; list-style: none; margin: 0; padding: 4px 10px; line-height: 18px; white-space: nowrap;}
 
 
